--- a/briar-android/src/main/res/values-oc/strings.xml
+++ b/briar-android/src/main/res/values-oc/strings.xml
@@ -263,6 +263,7 @@ Volètz suprimir vòstre compte e ne crear un nòu ?\n
   <string name="blogs_rss_remove_feed_ok">Suprimir</string>
   <string name="blogs_rss_feeds_manage_delete_error">Impossible de suprimir lo flux !</string>
   <string name="blogs_rss_feeds_manage_error">Error en cargar vòstres fluxes. Ensajatz mai tard.</string>
+  <!--Settings Display-->
   <!--Settings Network-->
   <string name="network_settings_title">Ret</string>
   <string name="bluetooth_setting">Se connectar per Bluetooth</string>
