--- a/briar-android/src/main/res/values-ru/strings.xml
+++ b/briar-android/src/main/res/values-ru/strings.xml
@@ -323,6 +323,11 @@
   <string name="blogs_rss_feeds_manage_delete_error">Не удалось удалить RSS-канал!</string>
   <string name="blogs_rss_feeds_manage_empty_state">Нет RSS-лент для отображения\n\nКоснитесь значка + для импорта ленты</string>
   <string name="blogs_rss_feeds_manage_error">Ошибка при загрузке каналов. Повторите попытку позже.</string>
+  <!--Settings Display-->
+  <string name="pref_language_title">Язык &amp; регион</string>
+  <string name="pref_language_changed">Этот параметр вступит в силу после перезапуска Briar. Пожалуйста, выйдите и перезапустите Briar.</string>
+  <string name="pref_language_default">По умолчанию</string>
+  <string name="display_settings_title">Отображение</string>
   <!--Settings Network-->
   <string name="network_settings_title">Сети</string>
   <string name="bluetooth_setting">Подключение через Bluetooth</string>
