--- a/briar-android/src/main/res/values-sr/strings.xml
+++ b/briar-android/src/main/res/values-sr/strings.xml
@@ -212,6 +212,7 @@
   <string name="blogs_rss_remove_feed_ok">Ukloni</string>
   <string name="blogs_rss_feeds_manage_delete_error">Kanal nije bilo moguće ukloniti!</string>
   <string name="blogs_rss_feeds_manage_error">Došlo je do problema pri učitavanju vaših kanala. Probajte opet kasnije.</string>
+  <!--Settings Display-->
   <!--Settings Network-->
   <string name="network_settings_title">Mreže</string>
   <string name="bluetooth_setting">Povežite se preko Bluetooth-a</string>
